Correction ds package.js de la cde Sass

--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -1,5 +1,5 @@
 @import "variables";
 @import "mixins";
-@import "animations";
-@import "loader";
+@import "effets";
+@import "function";
 @import "button";
