--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -123,4 +123,45 @@ ul li {
   box-shadow: 3px 12px 22px 3px rgba(0, 0, 0, 0.4);
 }
 
+/*footer*/
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  color: white;
+}
+.footer__title {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: 400;
+  margin: 18px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0px;
+  margin: 20px;
+  z-index: 1;
+}
+.footer__list__text {
+  text-decoration: none;
+  margin: 0px;
+  box-sizing: border-box;
+}
+.footer__list__text a {
+  color: white;
+  display: flex;
+  flex-direction: row;
+}
+.footer__list__text__fa-solid {
+  display: flex;
+  flex-direction: row;
+}
+.footer__list__text i {
+  padding-right: 20px;
+  width: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
