--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -85,3 +85,52 @@ ul li {
         }
     }
 }
+
+
+
+
+
+
+
+
+
+/*footer*/
+.footer {
+    display: flex;
+    flex-direction: column;
+    background-color: #353535;
+    color: white;  
+   &__title {
+        font-family: "Shrikhand", sans-serif;
+        font-weight: 400;
+        margin:18px;
+        font-size: 18px;
+        cursor: pointer;
+   }
+   &__list {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        padding: 0px;
+        margin:20px;
+        z-index: 1;
+        &__text {
+            text-decoration: none;
+            margin: 0px;
+            box-sizing: border-box;
+            a {
+                color:$main-color;
+                display: flex;
+                flex-direction: row;
+              }
+            &__fa-solid {
+                display: flex;
+                flex-direction: row;
+            }
+            & i {
+                padding-right:20px;
+                width:20px;
+            }
+        }
+   }
+}
