--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -123,6 +123,76 @@ ul li {
   box-shadow: 3px 12px 22px 3px rgba(0, 0, 0, 0.4);
 }
 
+.filter {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.filter__title {
+  width: 100%;
+}
+.filter__content {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  align-items: center;
+  border-radius: 20px;
+  width: 80%;
+  height: 72px;
+  margin: 0 20px 40px 40px;
+  font-size: 16px;
+  background-color: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+}
+.filter__content:hover i {
+  color: #9356DC;
+}
+.filter__content p {
+  margin: 10px;
+  border-radius: 50px;
+  width: 30px;
+  height: 30px;
+  background-color: #9356DC;
+  color: white;
+  line-height: 30px;
+  text-align: center;
+  position: absolute;
+  top: 12px;
+  left: -25px;
+}
+.filter__content i {
+  margin: 0px 5px 0px 40px;
+}
+.filter__content h3 {
+  font-size: 16px;
+  margin: 15px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  background-color: #F6F6F6;
+  padding: 40px 0 40px 0;
+}
+.restaurants__cards__card {
+  padding: 0px;
+  background-color: white;
+  border-radius: 20px;
+  margin: 20px 20px 20px 20px;
+  position: relative;
+  height: 257px;
+  width: 90%;
+}
+.restaurants__cards__card img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  max-height: 169px;
+}
+
 /*footer*/
 .footer {
   display: flex;
