--- a/sass/scss/_mixins.scss
+++ b/sass/scss/_mixins.scss
@@ -13,3 +13,13 @@
     background: linear-gradient($secondary-color,$primary-color);
     box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.25);
 }
+
+@mixin texture-button {
+    border-radius: 20px;
+    width:80%;
+    height: 72px;
+    margin:0 20px 40px 40px ;
+    font-size: 16px;
+    background-color:$background-color;
+    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
+}
