--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -8,7 +8,7 @@
 
 * {
     font-family: 'roboto', sans-serif;
-    margin:0;
+    margin: 0;
 }
 
 a {
@@ -35,7 +35,7 @@ ul li {
 .nav {
     &__logo {
         width: 170px;
-        display:block;
+        display: block;
         @include center-box;
     }
 }
@@ -43,24 +43,24 @@ ul li {
 .form {
     display: flex;
     flex-direction: row;
-    width:100%;
-    padding:20px 0px 20px 0px;
+    width: 100%;
+    padding: 20px 0px 20px 0px;
     background-color: $background-location;
     box-shadow: inset 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
     justify-content: center; 
     &__location-dot{
         font-size: 16px;
-        margin-right:10px;
+        margin-right: 10px;
         align-items: center;
     }
     &__ville{
         font-weight: bold;
         background-color: $background-location;
-        border:none;
-        padding:0px;
+        border: none;
+        padding: 0px;
         text-align: center;
         font-size: 19px;
-        width:150px;
+        width: 150px;
     }
 
 }
@@ -73,7 +73,7 @@ ul li {
     padding: 40px 0px 80px 0px;
         p   {
             font-size: 18px;
-            margin:0px 20px 20px 20px;
+            margin: 0px 20px 20px 20px;
         }
         &__button {
             @include button-pink;
@@ -86,9 +86,79 @@ ul li {
     }
 }
 
+.filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 
+    &__title {
+        width:100%;
+    }
 
+    &__content {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        align-items: center;
+        
+        @include texture-button;   
+        &:hover i {
+            color: $primary-color;
+        }  
+        p {
+            margin: 10px;
+            border-radius: 50px;
+            width: 30px;
+            height: 30px;
+            background-color: $primary-color;
+            color:$main-color;
+            line-height: 30px;
+            text-align: center;
+            position: absolute;
+            top: 12px; 
+            left: -25px;
+          }
+        & i {
+            margin: 0px 5px 0px 40px;
+        }
+        
+        & h3 {
+            font-size: 16px;
+            margin: 15px;
+            text-align: center;
+            white-space: nowrap;
+        }
+    }    
+}    
+
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    background-color: $background-color;
+    padding:40px 0 40px 0;
+
+    &__cards {
+        &__card {
+            padding: 0px;
+            background-color: white;
+            border-radius: 20px;
+            margin:20px 20px 20px 20px;
+            position: relative;
+            height: 257px;
+            width: 90%;
+            
+            & img {
+                -o-object-fit: cover;
+                object-fit: cover;
+                border-radius: 20px 20px 0 0;
+                width: 100%;
+                max-height: 169px;       
+            }
+        }
+
+    }
+}
 
 
 
