Etape 2 et 3, page accueil et animation, ajout class et scss dans la section restaurants

--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -192,6 +192,40 @@ ul li {
   width: 100%;
   max-height: 169px;
 }
+.restaurants__cards__card__text {
+  margin: 8px;
+}
+.restaurants__cards__card__text__title {
+  padding-bottom: 10px;
+}
+
+.restaurants__cards__card__heart {
+  cursor: pointer;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  bottom: 30px;
+  right: 24px;
+}
+.restaurants__cards__card__heart .fa-heart {
+  font-size: 24px;
+  transition: opacity 1s ease-in-out;
+}
+.restaurants__cards__card__heart .fa-heart:hover {
+  opacity: 1;
+}
+.restaurants__cards__card__heart .fa-regular {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.restaurants__cards__card__heart .fa-solid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  background: linear-gradient(#9356DC, #FF79DA);
+}
 
 /*footer*/
 .footer {
