--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -1,3 +1,4 @@
+/* Color */
 $main-color:white;
 $background-color: #F6F6F6;
 $background-location:#EAEAEA;
@@ -5,3 +6,7 @@ $primary-color: #9356DC;
 $secondary-color:#FF79DA;
 $tertary-color:#99E2D0;
 $test-color:aquamarine;
+
+/* Media tablette and mobile */
+$tablette: 768px;
+$desktop:1024px;
