--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -250,6 +250,16 @@ ul li {
   height: 257px;
   width: 90%;
 }
+.restaurants__cards__card__new {
+  color: #008766;
+  background-color: #99e2d0;
+  text-align: center;
+  width: 70px;
+  padding: 5px;
+  position: absolute;
+  top: 2%;
+  right: 3%;
+}
 .restaurants__cards__card img {
   -o-object-fit: cover;
   object-fit: cover;
