--- a/sass/scss/_effets.scss
+++ b/sass/scss/_effets.scss
@@ -1,4 +1,4 @@
- /* animations Menu */
+ /* Menu page animation */
 
  .menu__card__starter {
     animation: start ease-in-out 1500ms 1 both 500ms;
