Correction police un peu trop grand des titres ENTREES/PLATS/DESSERT et du margin-bottom des pages de restaurant pour le desktop et la tablette

--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -3,7 +3,9 @@ $main-color:white;
 $background-color: #F6F6F6;
 $background-location:#EAEAEA;
 $primary-color: #9356DC;
+$primary-color2: #a374dc;
 $secondary-color:#FF79DA;
+$secondary-color2:#fc9ce0;
 $tertary-color:#99E2D0;
 $test-color:aquamarine;
 
