--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -185,11 +185,12 @@ ul li {
   margin: auto;
   background: linear-gradient(#FF79DA, #9356DC);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  transition: all 700ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 .section__hero__button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   box-shadow: 3px 12px 22px 3px rgba(0, 0, 0, 0.4);
+  background: linear-gradient(#fc9ce0, #a374dc);
 }
 
 /* Fonctionnement Style */
@@ -483,6 +484,7 @@ ul li {
     width: 60%;
     padding: 0 108px 0 108px;
     margin-left: 5%;
+    margin-bottom: -30px;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -490,6 +492,7 @@ ul li {
     width: 70%;
     padding: 0 108px 0 108px;
     margin-left: 7%;
+    margin-bottom: -30px;
   }
 }
 .menu__title {
@@ -570,7 +573,7 @@ ul li {
 }
 .menu__card__text {
   margin: 10px;
-  font-weight: normal;
+  font-size: 18px;
 }
 .menu__card__content {
   display: flex;
@@ -655,10 +658,11 @@ ul li {
   background: linear-gradient(#FF79DA, #9356DC);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   padding: 15px 60px 15px 60px;
-  transition: all 700ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 .footer__button__menu:hover {
   transform: scale(1.1);
+  background: linear-gradient(#fc9ce0, #a374dc);
   box-shadow: 3px 12px 22px 3px rgba(0, 0, 0, 0.4);
 }
 
